<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_temp_converter"
    tools:context="edu.singaporetech.travelapp.TempConverterActivity">

    <EditText
        android:id="@+id/editTextTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_temperature_here"
        android:inputType="numberSigned"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/to_fahrenheit_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_fahrenheit" />

        <RadioButton
            android:id="@+id/to_celsius_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_celsius" />

    </RadioGroup>

    <Button
        android:id="@+id/convert_temp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        style="@style/MyButtonTheme"/>

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        style="@style/MyButtonTheme"/>

    <TextView
        android:id="@+id/display_temp_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
</LinearLayout>


