<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.singaporetech.travelapp.CurrencyConverterActivity">

    <!-- TODO implement the UI here... -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/singapore_dollars"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextSingDollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        style="@style/MyButtonTheme"/>

    <TextView
        android:id="@+id/display_currency_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
</LinearLayout>